Add fastapi as a dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 packages = [{include = "preferences_app"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
+fastapi = {version = "^0.88.0", extras = ["all"]}
 
 
 [build-system]
